20170411:
	* GNU autoconf: Added configure.ac, Makefile.am and other supportives
	* IUP: Modified the buildsys to fit into autoconf.
	* ezconfig: Been outdated by autoconf.
	* id_lookup.c: Removed the codec table because it's jumping around
	different ffmpeg versions.
	* libav: should be supported now.

20170310: 3.5.0
	* ezgui.c: Added a progress bar dialog for integrating with file managers.

20160809: release 3.4.1
	* Added factory reset
	* IUP updated to 3.10.1
	* Fixed the progress bar overlap status bar issue
	* Fixed the utf-8 filename issue in Windows
	* Fixed the core dump when verbose level reach 7
	* Fixed the failure of removing registry in Windows.
	
20160809:
	* libcsoup: updated to 0.9.6
	which fixed two issue: the dead loop in csc_cdll that caused core dump
	in verbose level 7; the registry removal issue that caused by wrong
	path seperator.

20160806:
	* main.c: added the factory reset function.
	* main.c: added displaying credits.

20160805:
	* ezgui.c: Fixed the status/progress bar displaying issue in Windows
	The optind could go ahead of argc which caused -1 'fum' in ezgui_run()
	* ezgui.c: Fixed the logic that didn't run auto mode while initial.
	* ezgui.c: Fixed accessing utf-8 filename in Windows.
	It looks IUP option UTF8MODE_FILE turned every filename to UTF-8
	string so ezthumb has to abandon the fopen(), which was ok to read
	a file, but write to chaos filenames.
	The fix is using smm_fopen() instead which convert UTF-8 to UTF-16
	against the current code page.
	* ezicon.h: use the 128x128 icon only
	* ezgui.c: added hot keys to tab bar and decorated the ui

20160803:
	* libcsoup: updated to 0.9.3 to support module name translation.
	* Makefile: reviewed to support a better upsource management.

20160802:
	* external: upsourced to recent versions and clean up the libgd.
	* ezgui.c: removed the gtk part totally because IUP works pretty well.
	* ezthumb_debug.c: removed by reusing the same facilities in libcsoup.
